# AuthenticationAPI

./: .env.example  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: test.yml
app/: config.py  database.py  limiter.py  logger.py  main.py
app/api/v1/: __init__.py  router.py
app/api/v1/endpoints/: auth.py  users.py
app/models/: user.py
app/models/db/: types.py  user.py
app/utils/: token.py
tests/: conftest.py  test_auth.py  test_main.py  test_refresh.py
