[project]
name = "authentication-api"
version = "0.1.0"
description = "Reusable Authentication Microservice"
authors = [
    {name = "Dan", email = "25719905+danisatree@users.noreply.github.com"}
]
readme = "README.md"
requires-python = ">=3.12,<4.0"
dependencies = [
    "fastapi[standard] (>=0.120.2,<0.121.0)",
    "uvicorn (>=0.38.0,<0.39.0)",
    "environs (>=14.4.0,<15.0.0)",
    "sqlalchemy (>=2.0.44,<3.0.0)",
    "aiosqlite (>=0.21.0,<0.22.0)",
    "asyncpg (>=0.30.0,<0.31.0)",
    "passlib (>=1.7.4,<2.0.0)",
    "bcrypt (>=5.0.0,<6.0.0)",
    "python-jose (>=3.5.0,<4.0.0)",
    "alembic (>=1.17.2,<2.0.0)",
    "slowapi (>=0.1.9,<0.2.0)",
]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.1.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.8.0",
    "mypy>=1.13.0",
    "types-python-jose>=3.5.0",
    "pre-commit>=4.5.1",
]

[tool.poetry]
package-mode = false

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.ruff]
line-length = 120
target-version = "py312"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
